--- a/app.html
+++ b/app.html
@@ -7,14 +7,7 @@
     {{ APP }}
     <script src="https://static.ushiyihao.com/feature.min.js"></script>
     <script>
-    !(feature.canvas && feature.classList) && window.location.replace("https://static.ushiyihao.com/update.html")
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?b16ec48c65df6ebcbad3781ab46df645";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
+    !(feature.canvas && feature.classList) && window.location.replace('https://static.ushiyihao.com/update.html')
     </script>
   </body>
 </html>
