--- a/static/open-in-weixin.html
+++ b/static/open-in-weixin.html
@@ -16,7 +16,7 @@
 
 <body>
   <br><br><br><br>
-  <img width="200" src="https://www.ushiyihao.com/static/web/usee-online.jpg" alt="">
+  <img width="200" src="https://static.ushiyihao.com/web/usee-online.jpg" alt="">
   <p>请关注U视一号公众号</p>
 </body>
 
